# zephyr_analysis

./: .gitignore  README.md  pyproject.toml
references/: respiratory_viruses.fasta
results/: cluster_summary.csv  coverage_summary.csv  genome_coverage.csv  pool_summary.csv  read_embeddings.csv
scripts/: 01_prepare_data.py  02_taxonomic_classification.py  03_genome_coverage.py  04_embedding_clustering.py
